@startuml

title __BOOK RECYCLER VIEW ADAPTER's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    class UserBookFragment {
      - coverId : String
      - title : String
      - author : String
      - isbn : String
      - status : String
      - ownerId : String
      - RESULT_ISBN : int
      - activity : Activity
      - scanSuccessfulDialog : AlertDialog
      - valueEventListener : ValueEventListener
      - databaseReference : DatabaseReference
      - mListener : OnClickListener
      - imageController : ImageController
      - bookController : BookController
      + onAttach()
      + onCreateView()
      + onDestroyView()
      + onCreate()
      + onCreateOptionsMenu()
      + onOptionsItemSelected()
      - setImage()
      - setBookInfo()
      - showError()
      - setStatusBar()
      - setButtons()
      - onClickUser()
      - onClickMessageUser()
      - onClickButton()
      - onClickTempButton()
      + onActivityResult()
      - sendRequest()
      - cancelRequest()
      - setStatusBorrowed()
      - processReturn()
      + onClick()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.myBook {
      class MyBookFragment {
        - coverId : String
        - title : String
        - author : String
        - isbn : String
        - status : String
        - activity : Activity
        - valueEventListener : ValueEventListener
        - databaseReference : DatabaseReference
        - bookController : BookController
        - userController : UserController
        - imageController : ImageController
        + onAttach()
        + onCreateView()
        + onDestroyView()
        + onCreate()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        - setUI()
        - setImage()
        - fragmentSelector()
        - loadFragment()
        - showError()
        - onClickEditBook()
        - deleteWarning()
        - deleteBook()
        + onClick()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.bookCatalogue {
      class BookCatalogueFragment {
        - title : String
        - author : String
        - isbn : String
        - coverBitmap : Bitmap
        - valueEventListener : ValueEventListener
        - databaseReference : DatabaseReference
        + onCreateView()
        + onDestroyView()
        - setUI()
        - loadFragment()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    class BookListItem {
      - cover : Bitmap
      - coverId : String
      - title : String
      - author : String
      - isbn : String
      - status : String
      - ownerId : String
      {static} + getComparator()
      + BookListItem()
      + BookListItem()
      + BookListItem()
      + getCover()
      + setCover()
      + getTitle()
      + setTitle()
      + getAuthor()
      + setAuthor()
      + getIsbn()
      + setIsbn()
      + getStatus()
      + setStatus()
      + getOwnerId()
      + setOwnerId()
      + getCoverId()
      + setCoverId()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookRecyclerViewAdapter {
      - mContext : Context
      - mBookListItem : List<BookListItem>
      - destination : String
      + BookRecyclerViewAdapter()
      + onCreateViewHolder()
      + onBindViewHolder()
      + getItemCount()
      - dataBundler()
      + setmBookListItem()
      - setDestination()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.holder {
      class BookViewHolder {
        + itemBook : RelativeLayout
        + ivCover : ImageView
        + tvTitle : TextView
        + tvAuthor : TextView
        + tvISBN : TextView
        + ivStatus : ImageView
        + BookViewHolder()
      }
    }
  }
}

BookViewHolder -up-|> ViewHolder

BookRecyclerViewAdapter -up-|> Adapter
BookRecyclerViewAdapter "1" -down- "*" BookViewHolder : creates >
BookRecyclerViewAdapter o-- "*" BookListItem

BookRecyclerViewAdapter "1" -- "1" UserBookFragment : creates >
BookRecyclerViewAdapter "1" -- "1" MyBookFragment : creates >
BookRecyclerViewAdapter "1" -- "1" BookCatalogueFragment : creates >


right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml